2010-02-15  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Merge
	  TemplateBindingExpression.UpdatingTarget and
	  BindingExpressionBase.UpdatingSource into
	  Expression.Updating. The variables mean the same thing and
	  it simplifies some of our logic.

2010-02-15  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: BindingExpressions shouldn't do
	  setup in their constructor as they can be detached from one
	  FrameworkElement and attached to another and they should
	  still work. 

2010-02-10  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Unregress drt 508 by disconnecting
	  the property path listener when the binding is destroyed.

2010-02-09  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs:
	* IndexedPropertyPathNode.cs:
	* StandardPropertyPathNode.cs: When we set a binding like:
	  fe.SetBinding (SomeClass.SomeProperty, binding), we only
	  listen for property changed notifications on 'SomeProperty'
	  if it's a user registered DP. Otherwise we do the usual
	  thing and only update the source of the binding inside
	  FrameworkElement.SetValueImpl.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* CollectionViewSource.cs: Fix compiler warnings.

2010-02-08  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathNode.cs:
	* StandardPropertyPathNode.cs: Add better support for
	  databinding to a DP directly or via its string name.

2010-02-04  Alan McGovern  <amcgovern@novell.com>

	* StandardPropertyPathNode.cs: Make StandardPropertyPath look
	  for a DependencyProperty rather than just a PropertyInfo so
	  that it can listen for property changed events. This fixes
	  the volume control slider in olympics.

2010-02-04  Alan McGovern  <amcgovern@novell.com>

	* StandardPropertyPathNode.cs: Remove duplicate code.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathNode.cs:
	* IPropertyPathNode.cs:
	* PropertyPathWalker.cs:
	* IndexedPropertyPathNode.cs: